{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayControls",
            "id": "e11a0096-ea84-4e3b-ad09-f71cef909660",
            "actions": [
                {
                    "name": "LeftArm",
                    "type": "Button",
                    "id": "811ca89d-e99e-4fba-96b9-67953d7e6f91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightArm",
                    "type": "Button",
                    "id": "f43c128e-15a5-43fb-92b0-2966efd9a559",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftLeg",
                    "type": "Button",
                    "id": "672af230-1b26-40bc-8b26-4bbe8399a242",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightLeg",
                    "type": "Button",
                    "id": "af2e9c2a-2f27-42b6-8a9f-9b415d92f1ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "9fed2231-1f5c-422d-8ff1-f4ea7fc02ba2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "13ab6112-1be1-4be6-894c-ca99d1e2cd15",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cac1faa8-d172-4d02-96a3-08bce44dd639",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60509ca8-1e55-4485-b585-64600a5c40de",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftLeg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bcd5ba4-b483-474d-bb80-9a2988e8ddfe",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeg",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114b660d-e234-4520-9efb-1f503dba7b8e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}